--- a/Desktop/Projects/excursion/index.html
+++ b/Desktop/Projects/excursion/index.html
@@ -2,13 +2,14 @@
 
 <html>
 <head>
-<link rel="stylesheet" href="excursion/resources/css/style.css"
+<link rel="stylesheet" href="resources/css/style.css"
+<title>Excursion</title>
 </head>
 
 <body>
  <header>
    <h1>Discover hidden places in the world around you</h1>
-   <a href="https://5986b3be39664a0ab334becc6da44495.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
+   <p><a href="https://5986b3be39664a0ab334becc6da44495.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></p>
  </header>
 
 </body>
