--- a/Desktop/Projects/excursion/index.html
+++ b/Desktop/Projects/excursion/index.html
@@ -9,7 +9,7 @@
 <body>
  <header>
    <h1>Discover hidden places in the world around you</h1>
-   <p><a href="https://5986b3be39664a0ab334becc6da44495.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></p>
+   <p><a href="#">Download Excursion (Coming Soon!)</a></p>
  </header>
 
 </body>
