--- a/Desktop/Projects/excursion/index.html
+++ b/Desktop/Projects/excursion/index.html
@@ -9,8 +9,19 @@
 <body>
  <header>
    <h1>Discover hidden places in the world around you</h1>
-   <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+   <p><a class="link" href="#">Download Excursion (Coming Soon!)</a></p>
+   <video autoplay loop>
+     <source src="/Users/katya/Desktop/Projects/excursion/resources/videos/excursion.mp4" type="video/mp4"/>
+   </video>
  </header>
+ <h2>Your personal travel guide</h2>
+ <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+
+ <p><img src="/Users/katya/Desktop/Projects/excursion/resources/images/camp.jpg"/></p>
+ <p><img src="/Users/katya/Desktop/Projects/excursion/resources/images/phone.png"/></p>
+
+<h2>Coming Soon for Iphone and Adroid</h2>
+<p><a class="link" href="#">Download Excursion (Coming Soon!)</a></p>
 
 </body>
 </html>
